# mcp-fooocus-api

./: .env.example  .gitignore  INSTALL.md  LICENSE  README.md  pyproject.toml
src/mcp_fooocus_api/: __init__.py  __main__.py  server.py
