[project]
name = "mcp-fooocus-api"
version = "0.1.0"
description = "MCP server for Fooocus Stable Diffusion API"
authors = [
    { name = "Raihan Afiandi", email = "raihan.afiandi@lintasarta.co.id" }
]
keywords = ["mcp", "fooocus", "stable-diffusion", "ai", "image-generation"]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.2,<3.0.0",
    "jsonschema>=4.0.0",
    "anyio>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/raihan0824/mcp-fooocus-api"
Repository = "https://github.com/raihan0824/mcp-fooocus-api"
Issues = "https://github.com/raihan0824/mcp-fooocus-api/issues"
Documentation = "https://github.com/raihan0824/mcp-fooocus-api#readme"

[project.scripts]
mcp-fooocus-api = "mcp_fooocus_api.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_fooocus_api"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 88
target-version = "py38"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "mcp.*",
    "httpx.*",
    "dotenv.*",
]
ignore_missing_imports = true
